--- a/tarihce.html
+++ b/tarihce.html
@@ -95,8 +95,7 @@
                         </div>
                     </div>
                     <div class="history-swiper-wrap">
-                        <a class="btn-redirect historySwiper-button-prev" href=""><i
-                                class="icon-chevron-left"></i></a>
+                        <a class="btn-redirect historySwiper-button-prev" href=""><i class="icon-chevron-left"></i></a>
                         <div class="swiper historySwiperThumb">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
@@ -116,8 +115,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="btn-redirect historySwiper-button-next" href=""><i
-                                class="icon-chevron-right"></i></a>
+                        <a class="btn-redirect historySwiper-button-next" href=""><i class="icon-chevron-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-7 p-0 text-end  order-0 order-lg-1">
@@ -153,7 +151,7 @@
                                     <div class="back-object bg-primary"></div>
                                 </div>
                             </div>
-                           
+
                         </div>
                     </div>
                 </div>
@@ -162,6 +160,85 @@
     </section>
     <!-- =========== About Page What We Do END =========== -->
 
+    <!-- =========== Owner START  =========== -->
+    <section class="overflow-hidden ">
+        <div class="owner-container ms-auto">
+            <div class="row">
+                <div class="col-lg-6 d-flex align-items-center">
+                    <div class="section-v1-content owner">
+                        <h2 class="title">
+                            Kurucu: Cumali Övüngen
+                        </h2>
+                        <p>1975 yılında inşaat sektörüne giren Yedi Yapı, iş dünyasındaki vizyonuyla, kısa sürede inşaat
+                            sektöründe adı güven ve kaliteyle anılan bir şirket konumuna yükseldi. Yüzde yüz yerli
+                            sermayeyle, sektöre modern ve kullanışlı yaşam alanları kazandırmayı.. 7 Yedi Yapı İnşaat
+                            Taahhüt Ticaret Limited Şirketi, Cumali Övüngen tarafından 200 bin TL sermaye ile 11
+                            Mayıs’ta
+                            Bağcılar, Demirkapı Mahallesi, Halide Edip Adıvar Caddesi’nde kuruldu.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="img-capsule overflow-hidden">
+                        <img class="owner-img mx-auto" src="assets/img/about-us/history-founder.png">
+                        <div class="back-object bg-primary w-70 me-0"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========== Owner END =========== -->
+
+    <!-- =========== setup START  =========== -->
+    <section class="overflow-hidden bg-light">
+        <div class="owner-container me-auto ">
+            <div class="row gy-4 flex-column-reverse flex-lg-row">
+                <div class="col-lg-6">
+                    <div class="img-capsule padding-r-80-lg">
+                        <img class="setup-img" src="assets/img/about-us/setup-img.png">
+                        <div class="back-object w-70 bg-primary "></div>
+                    </div>
+                </div>
+                <div class="col-lg-6 d-flex align-items-center">
+                    <div class="section-v1-content owner">
+                        <h2 class="title">
+                            Kurulum ve Gelişim
+                        </h2>
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                            classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a
+                            Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
+                            Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the
+                            word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from
+                            sections 1.10.32 and 1.10.33 of “de Finibus Bonorum et Malorum” (The Extremes of Good and
+                            Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very
+                            popular during the Renaissance. The first line of Lorem Ipsum, “Lorem ipsum dolor sit
+                            amet..”, comes from a line in section 1.10.32.
+                            <br><br>
+                            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those
+                            interested. Sections 1.10.32 and 1.10.33 from “de Finibus Bonorum et Malorum” by Cicero are
+                            also reproduced in their exact original form, accompanied by English versions from the 1914
+                            translation by H. Rackham.
+                            <br><br>
+                            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece
+                            of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,
+                            a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
+                            Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the
+                            word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from
+                            sections 1.10.32 and 1.10.33 of “de Finibus Bonorum et Malorum” (The Extremes of Good and
+                            Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very
+                            popular during the Renaissance. The first line of Lorem Ipsum, “Lorem ipsum dolor sit
+                            amet..”, comes from a line in section 1.10.32.
+                            <br><br>
+                            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those
+                            interested. Sections 1.10.32 and 1.10.33 from “de Finibus Bonorum et Malorum” by Cicero are
+                            also reproduced in their exact original form, accompanied by English versions from the 1914
+                            translation by H. Rackham.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========== setup END =========== -->
 
     <!-- =========== Footer Side  =========== -->
     <footer>
