--- a/yonetim-kurulu.html
+++ b/yonetim-kurulu.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- =========== Header Side =========== -->
-    <header class="dark">
+    <header class="light">
         <div class="container d-flex align-items-center flex-lg-nowrap flex-wrap justify-content-between">
             <a class="logo" href="index.html"> <img src="assets/img/logo.png" alt="logo"></a>
             <a href="#" class="mobile-btn d-block d-lg-none">
@@ -48,6 +48,16 @@
             </nav>
         </div>
     </header>
+    <div class="routing-area">
+        <div class="container">
+            <h5 class="title">Yönetim Kurulu</h5>
+            <div class="routers-link">
+                <a href="index.html">Anasayfa <i class="icon-chevron-right"></i></a>
+                <a href="javascript:;">Hakkında <i class="icon-chevron-right"></i></a>
+                <a class="active" href="yonetim-kurulu.html">Yönetim Kurulu</a>
+            </div>
+        </div>
+    </div>
     <!-- Dropdown -->
     <div class="dropdown-wrap">
         <div id="about" class="dropdown-content">
@@ -66,6 +76,58 @@
         </div>
     </div>
 
+    <!-- =========== Yonetim kurulu START  =========== -->
+    <section class="manager-section">
+        <div class="container">
+            <h3 class="fs-50 font-400 mb-40 text-center">Yönetim Kurulu</h3>
+            <div class="row gy-4 manager-wrap">
+                <div class="col-xl-3 col-md-6">
+                    <div class="manager-card">
+                        <img src="assets/img/directors/director-1.png">
+                        <div class="content">
+                            <h5 class="title">Cumali Övüngen</h5>
+                            <h6 class="sub-title">Yönetim Kurulu Başkanı</h6>
+                        </div>
+                        <a class="link" href=""><i class="icon-Path3662"></i></a>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6">
+                    <div class="manager-card">
+                        <img src="assets/img/directors/director-2.png">
+                        <div class="content">
+                            <h5 class="title">Ferhat Yıldırım</h5>
+                            <h6 class="sub-title">Yardımcı Başkan</h6>
+                        </div>
+                        <a class="link" href=""><i class="icon-Path3662"></i></a>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6">
+                    <div class="manager-card">
+                        <img src="assets/img/directors/director-3.png">
+                        <div class="content">
+                            <h5 class="title">Edanur Cevher</h5>
+                            <h6 class="sub-title">Muhasebeci</h6>
+                        </div>
+                        <a class="link" href=""><i class="icon-Path3662"></i></a>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6">
+                    <div class="manager-card">
+                        <img src="assets/img/directors/director-4.png">
+                        <div class="content">
+                            <h5 class="title">Arda Yurtsever</h5>
+                            <h6 class="sub-title">Yönetim Temsilcisi</h6>
+                        </div>
+                        <a class="link" href=""><i class="icon-Path3662"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========== Yonetim kurulu END =========== -->
 
 
 
