--- a/tarihce.html
+++ b/tarihce.html
@@ -75,6 +75,7 @@
             </div>
         </div>
     </div>
+    <!-- =========== Header END =========== -->
 
 
     <!-- =========== history Page history-Swiper START =========== -->
