--- a/iletisim.html
+++ b/iletisim.html
@@ -18,8 +18,8 @@
 
 <body>
 
-    <!-- =========== Header Side =========== -->
-    <header class="dark">
+    <!-- =========== Header START =========== -->
+    <header class="light">
         <div class="container d-flex align-items-center flex-lg-nowrap flex-wrap justify-content-between">
             <a class="logo" href="index.html"> <img src="assets/img/logo.png" alt="logo"></a>
             <a href="#" class="mobile-btn d-block d-lg-none">
@@ -48,6 +48,15 @@
             </nav>
         </div>
     </header>
+    <div class="routing-area">
+        <div class="container">
+            <h5 class="title">İletişim</h5>
+            <div class="routers-link">
+                <a href="index.html">Anasayfa <i class="icon-chevron-right"></i></a>
+                <a class="active" href="iletisim.html">İletişim</a>
+            </div>
+        </div>
+    </div>
     <!-- Dropdown -->
     <div class="dropdown-wrap">
         <div id="about" class="dropdown-content">
@@ -65,7 +74,78 @@
             </div>
         </div>
     </div>
+    <!-- =========== Header END =========== -->
 
+    <!-- =========== Contact START =========== -->
+    <section class="route-section-contact bg-light-100">
+        <div class="container">
+            <div class="row justify-content-between gy-5 contact-container">
+                <div class="col-lg-4">
+                    <div class="contact-details">
+                        <img class="pb-4" src="assets/img/footer-logo.png">
+                        <h4 class="title">Yedi Yapı İnşaat</h4>
+                        <div class="infos">
+                            <a href="mailto:info@yediyapiinsaat.com" class="item"><i
+                                    class="icon-letter"></i>info@yediyapiinsaat.com</a>
+                            <a href="tel:02124539235" class="item"><i class="icon-phone"></i>0 (212) 453 92 35</a>
+                            <a href="tel:02123509414" class="item"><i class="icon-print"></i>0 (212) 350 94 14</a>
+                        </div>
+                        <div class="socials">
+                            <a href="#"> <i class="icon-instagram"></i></a>
+                            <a href="#"> <i class="icon-facebook"></i></a>
+                            <a href="#"> <i class="icon-twitter"></i></a>
+                            <a href="#"> <i class="icon-youtube"></i></a>
+                            <a href="#"> <i class="icon-linkedin"></i></a>
+                        </div>
+                        <div class="layer-icon">
+                            <i class="icon-pin"></i>
+                            <p>Ersun Yapılar Merkezi A4 Blok, Kat : 14 D:337, 34349
+                                Yeşilköy/Bakırköy/İstanbul</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-6">
+                    <iframe class="map-frame"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10107.703831573323!2d28.777720201663307!3d41.133689247777184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caaec2489690fb%3A0xd8db19afc6daedc9!2sToki%20Osmangazi%20%C4%B0lkokulu!5e0!3m2!1sen!2str!4v1663056740586!5m2!1sen!2str"
+                        style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========== Contact END =========== -->
+
+    <!-- =========== Contact-Form START =========== -->
+    <section class="contact-form-section px-4">
+        <div class="contact-form-container">
+            <h3 class="h3-title text-center mb-3 mb-lg-5">Başvur</h3>
+            <form class="contact-form">
+                <div class="row mb-4 gy-2">
+                    <div class="col-md"><label class="radio-box"><input class="primary-radio" type="radio" name="group1" required> Arsa Almak İstiyorum.</label></div>
+                    <div class="col-md"><label class="radio-box"><input class="primary-radio" type="radio" name="group1" required> İş Ortağı Olmak İstiyorum.</label></div>
+                    <div class="col-md"><label class="radio-box"><input class="primary-radio" type="radio" name="group1" required> Konut almak İstiyorum.</label></div>
+                </div>
+                <div class="inputs mb-4">
+                    <input type="text" placeholder="Ad - Soyad" name="nameSurname" required>
+                    <input type="text" placeholder="Telefon Numarası" name="phone" required>
+                    <input type="email" placeholder="E-posta Adresi" name="email" required>
+                    <textarea name="message" rows="7" placeholder="Mesajınız" required></textarea>
+                </div>
+                <label class="radioAndText mb-2"><input class="primary-radio" type="radio" name="onay1" required> Ticari elektronik iletiler ve diğer iletiler gönderilmesine onay veriyorum.</label>
+                <label class="radioAndText">
+                    <input class="primary-radio" type="radio" name="onay2" required> Aydınlatma metni içerisinde yer alan açıklamalar kapsam ve sınırında, Yedi Yapı Ofisi İnş, Tur San. Tic. Ltd. Şirketi bünyesinde
+                    gerçekleştirmiş olduğum üyelik başvurusu süreci ile ilgili olarak kişisel verilerimin işlenmesine onay veriyorum.
+                </label>
+
+                <div class="text-end mt-5">
+                    <button class="btn-primary position-icon">Gönder <i class="icon-big-right"></i></button>
+                </div>
+
+            </form>
+        </div>
+    </section>
+    <!-- =========== Contact-Form END =========== -->
 
 
 
@@ -110,7 +190,6 @@
                         <a href="#"> <i class="icon-twitter"></i></a>
                         <a href="#"> <i class="icon-youtube"></i></a>
                         <a href="#"> <i class="icon-linkedin"></i></a>
-
                     </div>
                 </div>
 
