--- a/blog-detay.html
+++ b/blog-detay.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- =========== Header Side =========== -->
-    <header class="dark">
+    <header class="light">
         <div class="container d-flex align-items-center flex-lg-nowrap flex-wrap justify-content-between">
             <a class="logo" href="index.html"> <img src="assets/img/logo.png" alt="logo"></a>
             <a href="#" class="mobile-btn d-block d-lg-none">
@@ -48,6 +48,15 @@
             </nav>
         </div>
     </header>
+    <div class="routing-area">
+        <div class="container">
+            <h5 class="title">Yedi Yapı’dan Yeni Bir Proje Açıklaması.. </h5>
+            <div class="routers-link">
+                <a href="index.html">Anasayfa <i class="icon-chevron-right"></i></a>
+                <a class="active" href="javascript:;">Yedi Yapı’dan Yeni Bir Proje Açıklaması.. </a>
+            </div>
+        </div>
+    </div>
     <!-- Dropdown -->
     <div class="dropdown-wrap">
         <div id="about" class="dropdown-content">
@@ -65,9 +74,43 @@
             </div>
         </div>
     </div>
+    <!-- =========== Header Side =========== -->
 
+    <!-- Blog detail content START -->
+    <section class="blog-detail-hero-section text-center">
+        <div class="container">
+            <h3 class="h3-title mb-4">Yedi Yapı’dan Yeni Bir
+                Proje Açıklaması.. </h3>
+            <p class="sub-title">Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen
+                Türkiye’nin enerjisi. Geleceği belirleyecek kadar farklıyız.</p>
+            <span class="date">06.11.2022</span>
 
+            <img class="img" src="assets/img/cta-img.png">
+            <div class="content">
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece
+                    of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,
+                    a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more
+                    obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the
+                    cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum
+                    comes from sections 1.10.32 and 1.10.33 of “de Finibus Bonorum et Malorum” (The
+                    Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the
+                    theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum,
+                    “Lorem ipsum dolor sit amet..”, comes from a line in section 1.10.32.
+                </p>
+                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those 
+                    interested. Sections 1.10.32 and 1.10.33 from “de Finibus Bonorum et Malorum” by 
+                    Cicero are also reproduced in their exact original form, accompanied by English versions 
+                    from the 1914 translation by H. Rackham.</p>
+            </div>
+        </div>
+    </section>
+    <!-- Blog detail content END -->
+ 
+    <section class="bg-light">
+        <div class="container">
 
+        </div>
+    </section>
 
 
     <!-- =========== Footer Side  =========== -->
