--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                     <h5 class="title">CNR Expo 8.Hall 208. Standayız</h5>
                                 </div>
                                 <div class="link">
-                                    <a href=""> Devamını Oku <i class="icon-Path3662"></i></a>
+                                    <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -401,7 +401,7 @@
                                     <h5 class="title">Yedi Yapı, 350 milyon dolara şehrin sembolünü yapacak</h5>
                                 </div>
                                 <div class="link">
-                                    <a href=""> Devamını Oku <i class="icon-Path3662"></i></a>
+                                    <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -417,7 +417,7 @@
                                         15 gün Geri sayım</h5>
                                 </div>
                                 <div class="link">
-                                    <a href=""> Devamını Oku <i class="icon-Path3662"></i></a>
+                                    <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -432,7 +432,7 @@
                                     <h5 class="title">Yedi Yapı Kripto para ile ödeme alacak mı? </h5>
                                 </div>
                                 <div class="link">
-                                    <a href=""> Devamını Oku <i class="icon-Path3662"></i></a>
+                                    <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -448,7 +448,7 @@
                                         hazır hale geliyor</h5>
                                 </div>
                                 <div class="link">
-                                    <a href=""> Devamını Oku <i class="icon-Path3662"></i></a>
+                                    <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
                                 </div>
                             </div>
                         </div>
