--- a/tarihce.html
+++ b/tarihce.html
@@ -194,8 +194,8 @@
         <div class="owner-container me-auto ">
             <div class="row gy-4 flex-column-reverse flex-lg-row">
                 <div class="col-lg-6">
-                    <div class="img-capsule padding-r-80-lg">
-                        <img class="setup-img" src="assets/img/about-us/setup-img.png">
+                    <div class="img-capsule ">
+                        <img class="setup-img " src="assets/img/about-us/setup-img.png">
                         <div class="back-object w-70 bg-primary "></div>
                     </div>
                 </div>
