--- a/blog-detay.html
+++ b/blog-detay.html
@@ -97,18 +97,124 @@
                     theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum,
                     “Lorem ipsum dolor sit amet..”, comes from a line in section 1.10.32.
                 </p>
-                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those 
-                    interested. Sections 1.10.32 and 1.10.33 from “de Finibus Bonorum et Malorum” by 
-                    Cicero are also reproduced in their exact original form, accompanied by English versions 
+                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those
+                    interested. Sections 1.10.32 and 1.10.33 from “de Finibus Bonorum et Malorum” by
+                    Cicero are also reproduced in their exact original form, accompanied by English versions
                     from the 1914 translation by H. Rackham.</p>
             </div>
         </div>
     </section>
     <!-- Blog detail content END -->
- 
+
     <section class="bg-light">
         <div class="container">
-
+            <div class="mb-4 d-flex justify-content-between">
+                <h3 class="h3-title">Diğer Yazılar</h3>
+                <div class="d-flex">
+                    <span class="b-nav-btn me-3 blogFeaturesSwiper2-button-prev"><i class="icon-chevron-left"></i></span>
+                    <span class="b-nav-btn blogFeaturesSwiper2-button-next"><i class="icon-chevron-right"></i></span>
+                </div>
+            </div>
+            <div class="swiper blogFeaturesSwiper2">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="blog-card">
+                            <div class="head">
+                                <img src="assets/img/blogs/blog-1.png">
+                            </div>
+                            <div class="content">
+                                <span class="date">06.11.2022</span>
+                                <h5 class="title">Yedi Yapı’dan Yerli plaza
+                                    Yeni Bir Proje
+                                    Açıklaması.. </h5>
+                            </div>
+                            <div class="link">
+                                <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="blog-card">
+                            <div class="head">
+                                <img src="assets/img/blogs/blog-1.png">
+                            </div>
+                            <div class="content">
+                                <span class="date">06.11.2022</span>
+                                <h5 class="title">Yedi Yapı’dan Yerli plaza
+                                    Yeni Bir Proje
+                                    Açıklaması.. </h5>
+                            </div>
+                            <div class="link">
+                                <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="blog-card">
+                            <div class="head">
+                                <img src="assets/img/blogs/blog-1.png">
+                            </div>
+                            <div class="content">
+                                <span class="date">06.11.2022</span>
+                                <h5 class="title">Yedi Yapı’dan Yerli plaza
+                                    Yeni Bir Proje
+                                    Açıklaması.. </h5>
+                            </div>
+                            <div class="link">
+                                <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="blog-card">
+                            <div class="head">
+                                <img src="assets/img/blogs/blog-1.png">
+                            </div>
+                            <div class="content">
+                                <span class="date">06.11.2022</span>
+                                <h5 class="title">Yedi Yapı’dan Yerli plaza
+                                    Yeni Bir Proje
+                                    Açıklaması.. </h5>
+                            </div>
+                            <div class="link">
+                                <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="blog-card">
+                            <div class="head">
+                                <img src="assets/img/blogs/blog-1.png">
+                            </div>
+                            <div class="content">
+                                <span class="date">06.11.2022</span>
+                                <h5 class="title">Yedi Yapı’dan Yerli plaza
+                                    Yeni Bir Proje
+                                    Açıklaması.. </h5>
+                            </div>
+                            <div class="link">
+                                <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="blog-card">
+                            <div class="head">
+                                <img src="assets/img/blogs/blog-1.png">
+                            </div>
+                            <div class="content">
+                                <span class="date">06.11.2022</span>
+                                <h5 class="title">Yedi Yapı’dan Yerli plaza
+                                    Yeni Bir Proje
+                                    Açıklaması.. </h5>
+                            </div>
+                            <div class="link">
+                                <a href="blog-detay.html"> Devamını Oku <i class="icon-Path3662"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
