--- a/projelerimiz.html
+++ b/projelerimiz.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- =========== Header Side =========== -->
-    <header class="dark">
+    <header class="light">
         <div class="container d-flex align-items-center flex-lg-nowrap flex-wrap justify-content-between">
             <a class="logo" href="index.html"> <img src="assets/img/logo.png" alt="logo"></a>
             <a href="#" class="mobile-btn d-block d-lg-none">
@@ -48,6 +48,21 @@
             </nav>
         </div>
     </header>
+    <div class="routing-area">
+        <div class="container">
+            <h5 class="title">Projelerimiz</h5>
+            <div class="routers-link">
+                <a href="index.html">Anasayfa <i class="icon-chevron-right"></i></a>
+                <a class="active" href="javascript:;">Projelerimiz</a>
+            </div>
+        </div>
+    </div>
+    <div class="project-tab">
+        <div class="p-container">
+            <a class="active" href="#">Yeni Projelerimiz</a>
+            <a href="#">Tamamlanmış</a>
+        </div>
+    </div>
     <!-- Dropdown -->
     <div class="dropdown-wrap">
         <div id="about" class="dropdown-content">
@@ -65,9 +80,109 @@
             </div>
         </div>
     </div>
+    <!-- =========== Header Side =========== -->
 
+    <!-- Projects Previev v1 START -->
+    <section class="project-tab-below-section not-padding project-preview-v1">
+        <div class="container">
+            <div class="row justify-content-between gy-5 flex-lg-row flex-column-reverse">
+                <div class="col-lg-5 d-flex align-items-center">
+                    <div class="section-v2-content p-0 blog-hero">
+                        <h3 class="title">Ankara Rovens Konutları</h3>
+                        <p>Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen <br>
+                            Türkiye’nin enerjisi. Geleceği belirleyecek kadar farklıyız.</p>
+                        <div class="image-preview mt-4">
+                            <div class="row">
+                                <div class="col"><img src="assets/img/projects/new-projects-minithumb-1.png"></div>
+                                <div class="col"><img src="assets/img/projects/new-projects-minithumb-2.png"></div>
+                                <div class="col"><img src="assets/img/projects/new-projects-minithumb-3.png"></div>
+                            </div>
+                        </div>
+                        <a href="proje-detay.html" class="btn-primary mt-4">Devamını Oku <i class="icon-Path3662"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-6 p-0 p-lg-2">
+                    <div class="img-capsule text-center">
+                        <img class="pe-lg-5" src="assets/img/projects/new-projects-thumb.png">
+                        <div class="back-object bg-primary me-0 w-80"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Project Previev v1 END-->
 
+    <!-- Projects Previev v2 START -->
+    <section class="project-preview-v2 right-content">
+        <div class="row g-0">
+            <div class="col-lg-6">
+                <img class="preview" src="assets/img/projects/panel-img.png">
+            </div>
+            <div class="col-lg-6 d-flex align-items-center">
+                <div class="content">
+                    <div class="section-v2-content project white ">
+                        <h3 class="title">Ordu Rota Panelleri</h3>
+                        <p>Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen
+                            Türkiye’nin enerjisi. Geleceği belirleyecek kadar farklıyız.</p>
 
+                        <a href="proje-detay.html" class="btn-primary mt-5">Devamını Oku <i class="icon-Path3662"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Projects Previev v2 START -->
+
+    <!-- Projects Previev v1 START -->
+    <section class="project-preview-v1">
+        <div class="container">
+            <div class="row justify-content-between gy-5 flex-lg-row flex-column-reverse">
+                <div class="col-lg-5 d-flex align-items-center">
+                    <div class="section-v2-content p-0 blog-hero">
+                        <h3 class="title">Ankara Rovens Konutları</h3>
+                        <p>Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen <br>
+                            Türkiye’nin enerjisi. Geleceği belirleyecek kadar farklıyız.</p>
+                        <div class="image-preview mt-4">
+                            <div class="row">
+                                <div class="col"><img src="assets/img/projects/new-projects-minithumb-1.png"></div>
+                                <div class="col"><img src="assets/img/projects/new-projects-minithumb-2.png"></div>
+                                <div class="col"><img src="assets/img/projects/new-projects-minithumb-3.png"></div>
+                            </div>
+                        </div>
+                        <a href="proje-detay.html" class="btn-primary mt-4">Devamını Oku <i class="icon-Path3662"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-6 p-0 p-lg-2">
+                    <div class="img-capsule text-center">
+                        <img class="pe-lg-5" src="assets/img/projects/new-projects-thumb.png">
+                        <div class="back-object bg-primary me-0 w-80"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Project Previev v1 END-->
+
+    <!-- Projects Previev v2 START -->
+    <section class="project-preview-v2 left-content">
+        <div class="row g-0">
+            <div class="col-lg-6">
+                <img class="preview" src="assets/img/projects/europo-build.png">
+            </div>
+            <div class="col-lg-6 d-flex align-items-center">
+                <div class="content">
+                    <div class="section-v2-content project white ">
+                        <h3 class="title">Ordu Rota Panelleri</h3>
+                        <p>Yatırımları, güçlü markaları ve tüketicilere verdiği değer ile büyüyen
+                            Türkiye’nin enerjisi. Geleceği belirleyecek kadar farklıyız.</p>
+
+                        <a href="proje-detay.html" class="btn-primary mt-5">Devamını Oku <i class="icon-Path3662"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Projects Previev v2 START -->
 
 
     <!-- =========== Footer Side  =========== -->
