--- a/proje-detay.html
+++ b/proje-detay.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- =========== Header Side =========== -->
-    <header class="dark">
+    <header class="light">
         <div class="container d-flex align-items-center flex-lg-nowrap flex-wrap justify-content-between">
             <a class="logo" href="index.html"> <img src="assets/img/logo.png" alt="logo"></a>
             <a href="#" class="mobile-btn d-block d-lg-none">
@@ -48,6 +48,15 @@
             </nav>
         </div>
     </header>
+    <div class="routing-area">
+        <div class="container">
+            <h5 class="title">Ankara Rovens Konutları</h5>
+            <div class="routers-link">
+                <a href="index.html">Anasayfa <i class="icon-chevron-right"></i></a>
+                <a class="active" href="projelerimiz.html">Projelerimiz</a>
+            </div>
+        </div>
+    </div>
     <!-- Dropdown -->
     <div class="dropdown-wrap">
         <div id="about" class="dropdown-content">
@@ -65,6 +74,7 @@
             </div>
         </div>
     </div>
+    <!-- =========== Header Side =========== -->
 
 
 
