--- a/proje-detay.html
+++ b/proje-detay.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <!-- =========== Header Side =========== -->
+    <!-- =========== Header START =========== -->
     <header class="light">
         <div class="container d-flex align-items-center flex-lg-nowrap flex-wrap justify-content-between">
             <a class="logo" href="index.html"> <img src="assets/img/logo.png" alt="logo"></a>
@@ -74,11 +74,85 @@
             </div>
         </div>
     </div>
-    <!-- =========== Header Side =========== -->
+    <!-- =========== Header END =========== -->
+
+    <!-- =========== Project Detail Hero START =========== -->
+    <section class="project-detail-hero">
+        <img class="banner" src="assets/img/project-detail/project-detail-banner.png">
+        <div class="content">
+            <h1 class="title">YEDİ YAPI</h1>
+            <hr>
+            <ol class="icons-container">
+                <li><i class="icon-pin"></i> Cevahir</li>
+                <li><i class="icon-house"></i> 9 Blok</li>
+                <li><i class="icon-opened-door"></i> 2+1, 3+, 4+1</li>
+            </ol>
+        </div>
+        <h4 class="sub-title">Satıştaki Projeler, Yeni Projeler</h4>
+        <div class="below-content">
+            <ol class="below-content-container">
+                <li><i class="icon-mesure"></i>Konsept</li>
+                <li><i class="icon-image"></i>Proje Galerisi</li>
+                <li><i class="icon-stair"></i>Kat Planı</li>
+                <li><i class="icon-pin"></i>Lokasyon</li>
+            </ol>
+        </div>
+    </section>
+    <!-- =========== Project Detail Hero END =========== -->
 
 
+    <!-- =========== project detail content START =========== -->
+    <section>
+        <div class="container">
+            <div class="text-center">
+                <img src="assets/img/footer-logo.png">
+                <div class="project-detail-content container-content mt-5">
+                    <h4>BU PROJE’NİN YILDIZI SİZ OLUN</h4>
+                    <p>Sizi sadece yeni bir eve değil, aynı zamanda konforlu ve ayrıcalıklı bir hayata davet ediyoruz.
+                        Yedi Yapı; modern mimarisi, sosyal donatıları ve şehrin yıldızı gibi parlayan özel konumu ile
+                        “Barınmak için değil, kaliteli yaşamı bulmak için” size en uygun seçenekleri sunacak, hızlı ve
+                        sürekli gelişen bölgeye ayrıcalıklı bir değer katacak!
+                    </p>
+                    <p>
+                        Konumuyla yakaladığı avantajı sağlam yapısı ve estetik mimarisi ile taçlandıran Yedi Yapı
+                        hayatınızı her açıdan güzelleştirecek.
+                        Tramvay güzergahında yer alan ayrıcalıklı konumu ile sahip olacağınız ulaşım kolaylığı çok iyi
+                        gelecek.</p>
+                </div>
+
+            </div>
+            <div class="project-detail-content-container">
+                <img class="project-detail-preview-img" src="assets/img/project-detail/other-project.png">
+                <div class="project-detail-content mt-4">
+                    <span class="primary-title"><i class="icon-mesure"></i> Konsept</span>
+                    <p>Yedi Yapı, bölgenin değerine yakışan standartlar ile Yedi Yapı güvencesiyle hayat buluyor,
+                        şehrin yeni ikonlarından biri olmaya aday cazibesiyle ise adeta Kayseri’ye göz kırpıyor!</p>
+                    <p>Göz alıcı mimari ve fonksiyonelliğin ön plana çıktığı bu Cadde’de lokasyonun avantajlarından
+                        faydalanacak ve şehrin kalbini tüm ritmiyle hissedeceksiniz.</p>
+                    <p>Yedi Yapı Cadde, karmaşanın yarattığı yorgunluktan uzakta, aradığınız her şeyi tam olarak
+                        karşılayacak şekilde, huzurdan ilham alarak tasarlandı.
+                        Kayseri’nin çehresini değiştirecek estetiğe sahip Yedi Yapı Cadde, kuzey çevreyoluna
+                        yakınlığı sebebiyle şehir hastanesi, alışveriş merkezleri ve üniversitelere; projenin hemen
+                        yanına yeni açılacak olan yol sayesinde ise havaalanı gibi önemli merkezlere yakın olduğu
+                        gibi bulunduğu cadde üzerinden geçmesi planlanan tramvay güzergahının avantajıyla ise
+                        ulaşımı sizler için daha kolay bir hale getiriyor.</p>
+                    <p>Tüm bunların yanı sıra içerisinde yer alan ticari alanları ile de değerli bir yatırım ve
+                        nitelikli bir yaşam sunuyor. Yedi Yapı Cadde hayatınızı her açıdan güzelleştirecek.</p>
+                    <p>Peki siz ayrıcalıklar dünyasında yer almaya hazır mısınız?</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========== project detail content END =========== -->
+
+    <!-- =========== Project Galery START =========== -->
+    <section>
+        
+    </section>
+    <!-- =========== Project Galery END =========== -->
 
 
+    <!-- =========== Header START =========== -->
 
     <!-- =========== Footer Side  =========== -->
     <footer>
